syntax = "proto3";
package image_variant;

option go_package = "nebulaid/protos/gen/image/image_variant;imagevariantpb";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

// 图片变体信息
// 存储图片的多个版本/衍生版本：缩略图、调整大小版本、格式转换（webp/jpg/png）、裁剪版本
message ImageVariant {
  string id = 1; // 变体ID (UUID)
  string image_id = 2; // 图片ID (UUID)
  string variant_key = 3; // 变体类型标识：thumbnail (150x150), small (300px), medium (720px), large (1080px), webp (转换后) 等
  optional int32 width = 4; // 宽度（像素）
  optional int32 height = 5; // 高度（像素）
  optional int64 size = 6; // 文件大小（字节）
  optional string mime_type = 7; // MIME 类型（可能与原始图片不同，如 webp 转换）
  string storage_path = 8; // 存储路径（文件系统路径或 S3 object key）
  optional string url = 9; // 公共访问URL（CDN URL 或直接存储 URL）
  google.protobuf.Timestamp created_at = 10; // 创建时间
  google.protobuf.Timestamp updated_at = 11; // 更新时间
}

// ImageVariant 服务 - 供其他服务通过 gRPC 管理图片变体
service ImageVariantService {
  // 根据ID获取图片变体
  rpc GetImageVariantByID (GetImageVariantByIDRequest) returns (GetImageVariantByIDResponse);
  
  // 根据图片ID和变体Key获取图片变体
  rpc GetImageVariantByImageIDAndKey (GetImageVariantByImageIDAndKeyRequest) returns (GetImageVariantByImageIDAndKeyResponse);
  
  // 根据图片ID获取所有变体列表
  rpc GetImageVariantsByImageID (GetImageVariantsByImageIDRequest) returns (GetImageVariantsByImageIDResponse);
  
  // 批量获取图片变体
  rpc BatchGetImageVariants (BatchGetImageVariantsRequest) returns (BatchGetImageVariantsResponse);
}

// ImageVariant Service Messages
message GetImageVariantByIDRequest {
  string variant_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetImageVariantByIDResponse {
  ImageVariant image_variant = 1;
}

message GetImageVariantByImageIDAndKeyRequest {
  string image_id = 1 [(buf.validate.field).string.uuid = true];
  string variant_key = 2 [(buf.validate.field).string.min_len = 1];
}

message GetImageVariantByImageIDAndKeyResponse {
  ImageVariant image_variant = 1;
}

message GetImageVariantsByImageIDRequest {
  string image_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetImageVariantsByImageIDResponse {
  repeated ImageVariant image_variants = 1;
}

message BatchGetImageVariantsRequest {
  repeated string variant_ids = 1 [(buf.validate.field).repeated = {min_items: 1, max_items: 100}];
}

message BatchGetImageVariantsResponse {
  repeated ImageVariant image_variants = 1;
  map<string, string> error_by_id = 2; // variant_id -> error_message
}

